# PETSc4FOAM_by_lzr

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md
cmake/: FindOpenFOAM.cmake  FindPETSc.cmake  PETSc4FOAMConfig.cmake.in
config/: OpenFOAMModules.txt
include/: Foam2PETSc.h  KSPWrapper.h  ParallelUtilities.h
src/: Foam2PETSc.cpp  KSPWrapper.cpp  ParallelUtilities.cpp
